# latent-recalibration

./: .gitignore  LICENSE  README.md  analysis_lr.ipynb  pyproject.toml  requirements.txt  run.py  visualizations_lr.ipynb
moc/: parallel_runner.py  run_experiment.py
moc/analysis/: cmaps.py  dataframes.py  helpers.py  highlighter.py  plot_barplots.py  plot_calibration.py  plot_recalibration.py  utils.py
moc/configs/: datasets.py  general.py
moc/datamodules/: __init__.py  afhq_datamodule.py  base_datamodule.py  preprocessing.py  real_datamodule.py  toy_datamodule.py  utils.py
moc/metrics/: calibration.py  chi.py  distribution_metrics.py  distribution_metrics_computer.py  utils.py
moc/models/: __init__.py  train.py  tuning.py  utils.py
moc/models/arflow/: arflow.py
moc/models/mqf2/: conditional_transform.py  lightning_module.py  model.py
moc/models/tarflow/: tarflow.py  transformer_flow.py
moc/models/trainers/: default_trainer.py  lightning_trainer.py
moc/recalibration/: __init__.py  bandwidth_cv.py  density_estimation.py  hdr_recalibrator.py  invert_vectorized.py  latent_recalibrator.py  manager.py  radial_transform.py  smooth_empirical_cdf.py  spline.py  spline_pyro.py  spline_trainer.py
moc/utils/: __init__.py  distributions.py  general.py  hparams.py  run_config.py
tests/: test_bijectivity.py  test_coverage.py  test_example.py
